<!-- * Copyright (c) 2016, Kansas State University
 * Licensed under Eclipse Public License v1.0
 * http://www.eclipse.org/legal/epl-v10.html -->
<resources>
    <string name="app_name">Bull Soundness Evaluation</string>
    <string name="Collections">Groups</string>
    <string name="Settings">Settings</string>
    <string name="Delete">Delete 30+ day old data</string>
    <string name="VetInfo">Setup Veterinary Information</string>
    <string name="MorphFields">Setup Morphology Fields</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="cname">Clinic name</string>
    <string name="Addr1">Address1</string>
    <string name="Addr2">Address2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="morph1">Normal</string>
    <string name="morph2">Morphology Field 2</string>
    <string name="morph3">Morphology Field 3</string>
    <string name="morph4">Morphology Field 4</string>
    <string name="morph5">Morphology Field 5</string>
    <string name="morph6">Morphology Field 6</string>
    <string name="morph7">Morphology Field 7</string>
    <string name="morph8">Morphology Field 8</string>
    <string name="morph9">Morphology Field 9</string>
    <string name="add">Add New Group</string>
    <string name="rname">Ranch Name</string>
    <string name="rnName">Rancher Name</string>
    <string name="phone">Phone</string>
    <string name="addBull">Add New Bull</string>
    <string name="bullInfo">Bull Info</string>
    <string name="matingInfo">Sex Drive and Mating Ability</string>
    <string name="phyParms">Physical Parameters</string>
    <string name="morphInfo">Morphology</string>
    <string name="motltyInfo">Motility</string>
    <string name="classification">Classification</string>
    <string name="misc">Comments and Other Info</string>
    <string name="bull_id1">Tag</string>
    <string name="bull_id2">Tattoo</string>
    <string name="bull_id3">RFID</string>
    <string name="bull_id4">Brand</string>
    <string name="bull_lot">Lot</string>
    <string name="breed">Breed</string>
    <string name="matingInfo_text1">Breeding Season Used</string>
    <string name="matingInfo_text2">Bull Performance Last year</string>
    <string name="perf_type1">Good</string>
    <string name="perf_type2">Poor</string>
    <string name="perf_type3">Unknown</string>
    <string name="perf_type4">Other</string>
    <string name="matingInfo_text3">Performance Description</string>
    <string name="matingInfo_text4">Other Comments</string>
    <string name="sireType1">Single-Sire</string>
    <string name="sireType2">Multi-Sire</string>
    <string name="sireType3">Not Used</string>
    <string name="phyParms1">Measurements</string>
    <string name="phyParms2">Physical Exam</string>
    <string name="bullMeasurement1">Scrotal circumference (cm)</string>
    <string name="bullMeasurement2">Body Condition(0-9)</string>
    <string name="bullMeasurement3">Pelvic X measure (cm)</string>
    <string name="bullMeasurement4">Pelvic Y measure (cm)</string>
    <string name="bullMeasurement5">Frame score (1-20)</string>
    <string name="bullMeasurement6">Hip Height (cm)</string>
    <string name="bullMeasurement7">Other measurement</string>
    <string name="bullMeasurement8">Other measurement units</string>
    <string name="phyExam1">Eyes Description</string>
    <string name="phyExam2">Feet Description</string>
    <string name="phyExam3">Legs Description</string>
    <string name="phyExam4">Testicles Description</string>
    <string name="phyExam5">Accessory Sex glands description</string>
    <string name="phyExam6">Inguinal Rings Description</string>
    <string name="phyExam7">Scrotal Shape description</string>
    <string name="phyExam8">Epidydimides description</string>
    <string name="phyExam10">Penis description</string>
    <string name="phyExam11">Prepuce description</string>
    <string name="phyExam12">Scrotum description</string>
    <string name="motilityField1">Individual Motility</string>
    <string name="motilityField2">Motility %</string>
    <string name="motilityCategory">Motility Gross Category</string>
    <string name="motilityType1">Poor</string>
    <string name="motilityType2">Fair</string>
    <string name="motilityType3">Good</string>
    <string name="motilityType4">Very good</string>
    <string name="classifyType1">Satisfactory</string>
    <string name="classifyType2">Deferred</string>
    <string name="classifyType3">Questionable</string>
    <string name="classifyType4">Unsatisfactory</string>
    <string name="morphologyLimit">Limit</string>
    <string name="title_activity_morphology_dashboard">MorphologyDashboard</string>
    <string name="NewMorphology">Add New Semen Collection</string>

</resources>
