<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ksu.cis.a4vm.bse.MeasurementsTable">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:fillViewport="true"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saveMeasurement"
                android:text="@string/save"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/field1"
                android:layout_below="@+id/saveMeasurement"
                android:hint="@string/bullMeasurement1"
                android:layout_alignParentLeft="true" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/field2"
                android:hint="@string/bullMeasurement2"
                android:layout_below="@id/field1"
                android:layout_alignParentLeft="true" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/field3"
                android:hint="@string/bullMeasurement3"
                android:layout_below="@id/field2"
                android:layout_alignParentLeft="true" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/field4"
                android:hint="@string/bullMeasurement4"
                android:layout_below="@id/field3"
                android:layout_alignParentLeft="true" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/field5"
                android:hint="@string/bullMeasurement5"
                android:layout_below="@id/field4"
                android:layout_alignParentLeft="true" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/field6"
                android:hint="@string/bullMeasurement6"
                android:layout_below="@id/field5"
                android:layout_alignParentLeft="true" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/field7"
                android:hint="@string/bullMeasurement7"
                android:layout_below="@id/field6"
                android:layout_alignParentLeft="true" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/field8"
                android:hint="@string/bullMeasurement8"
                android:layout_below="@id/field7"
                android:layout_alignParentLeft="true" />





        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
