<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ksu.cs.a4vm.bse.BullExam">

    <ScrollView android:id="@+id/ScrollViewExam"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:fillViewport="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bullInfo"
            android:text="@string/bullInfo"
            android:onClick="onClick"/>



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bullInfo"
                android:id="@+id/matingInfo"
                android:text="@string/matingInfo"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/matingInfo"
                android:id="@+id/phyParms"
                android:text="@string/phyParms"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phyParms"
                android:id="@+id/morphInfo"
                android:text="@string/morphInfo"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/morphInfo"
                android:id="@+id/motlty"
                android:text="@string/motltyInfo"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/motlty"
                android:id="@+id/classification"
                android:text="@string/classification"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/classification"
                android:id="@+id/misc"
                android:text="@string/misc"
                android:layout_marginTop="20dp"/>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
