<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ksu.cis.a4vm.bse.MatingInfo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <Button
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/save"
               android:id="@+id/saveMatingInfo"
               android:layout_centerHorizontal="true"/>

           <TableLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_below="@+id/saveMatingInfo"
               android:layout_marginTop="10dp"
               android:id="@+id/sireType">

               <TableRow android:background="@color/lightBlue">
                   <ToggleButton
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textOff="@string/sireType1"
                       android:textOn="@string/sireType1"
                       android:id="@+id/singleSire"
                       android:background="@color/white"
                       android:textColor="@color/lightBlue" />

                   <ToggleButton
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textOff="@string/sireType2"
                       android:textOn="@string/sireType2"
                       android:textColor="@color/lightBlue"
                       android:id="@+id/multiSire"
                       android:background="@color/white"/>
                   <ToggleButton
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textOff="@string/sireType3"
                       android:textOn="@string/sireType3"
                       android:textColor="@color/lightBlue"
                       android:id="@+id/NotUsedSire"
                       android:background="@color/white"/>

               </TableRow>
           </TableLayout>

           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/matingInfo_text1"
               android:id="@+id/mateSeason"
               android:layout_below="@+id/sireType"
               android:layout_marginTop="10dp" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/matingInfo_text2"
               android:id="@+id/bullPerf"
               android:layout_below="@+id/mateSeason"
               android:layout_marginTop="10dp"
               android:textColor="@color/black" />

           <TableLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_below="@+id/bullPerf"
               android:layout_marginTop="10dp"
               android:id="@+id/perfType">

               <TableRow android:background="@color/lightBlue">
                   <ToggleButton
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textOff="@string/perf_type1"
                       android:textOn="@string/perf_type1"
                       android:id="@+id/perfGood"
                       android:background="@color/white"
                       android:textColor="@color/lightBlue" />

                   <ToggleButton
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textOff="@string/perf_type2"
                       android:textOn="@string/perf_type2"
                       android:textColor="@color/lightBlue"
                       android:id="@+id/perfBad"
                       android:background="@color/white"/>
                   <ToggleButton
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textOff="@string/perf_type3"
                       android:textOn="@string/perf_type3"
                       android:id="@+id/perfUnkown"
                       android:background="@color/white"
                       android:textColor="@color/lightBlue" />

                   <ToggleButton
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textOff="@string/perf_type4"
                       android:textOn="@string/perf_type4"
                       android:id="@+id/perfOther"
                       android:background="@color/white"
                       android:textColor="@color/lightBlue" />
               </TableRow>
           </TableLayout>

           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/matingInfo_text3"
               android:id="@+id/perfDesc"
               android:layout_below="@+id/perfType"
               android:layout_marginTop="10dp"/>

           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/matingInfo_text4"
               android:id="@+id/comments"
               android:layout_below="@+id/perfDesc"
               android:layout_marginTop="10dp"/>





       </RelativeLayout>

    </ScrollView>





</RelativeLayout>
